Fix word-wrap won't work in Firefox by remove display: table of comment-table

--- a/app/assets/stylesheets/pages/courses.scss
+++ b/app/assets/stylesheets/pages/courses.scss
@@ -166,7 +166,6 @@
 }
 
 .comment-table {
-  display: table;
   width: 100%;
   h1 {
     margin-bottom: 15px;
